--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/project4?useSSL=false
 spring.datasource.username=project4
 spring.datasource.password=project4
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#
+#spring.main.web-application-type=NONE
+#
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
