update forgot password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,12 @@ spring.security.oauth2.client.registration.google.clientSecret=ZptsDAPoVjn7DzVYb
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/oauth2/callback/google
 
 upload.path=/static/img/pages/products
+
+
+    spring.mail.host= smtp.gmail.com
+    spring.mail.username= xuanduong.bee0@gmail.com
+    spring.mail.password: Duong0777667414
+    spring.mail.port: 587
+    spring.mail.properties.mail.smtp.auth=true
+   spring.mail.properties.mail.smtp.starttls.enable=true
+   mail.smtp.debug=true
